infra/k8s/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: wafizo
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
