infra/k8s/web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: wafizo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.wafizo.fr
      secretName: app-wafizo-fr-tls
  rules:
    - host: app.wafizo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
